# trabalho-3-persistencia

./: .env  .gitignore  pyproject.toml
src/: main.py
src/database/: database.py
src/deserializer/: deserializer.py
src/models/: fornecedor.py  produto.py  produtoFornecedor.py  transacao.py
src/routers/: prodForn_router.py  produto_router.py
src/schemas/: produto.py
src/services/: fornecedor_service.py  produtoFornecedor_service.py  produto_service.py
