[project]
name = "projeto-t2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "motor[srv]>=3.7.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pymongo[srv]>=4.15.5",
]
